--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=student-service-default
+#spring.application.name=student-service-default
 
-server.port=8081
+#server.port=8081
 
 spring.datasource.username=root
 spring.datasource.password=1234
