--- a/application-test.properties
+++ b/application-test.properties
@@ -1,6 +1,6 @@
-spring.application.name=student-service-test
+#spring.application.name=student-service-test
 
-server.port=8091
+#server.port=8091
 
 spring.datasource.username=root
 spring.datasource.password=1234
