--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,6 +1,6 @@
-spring.application.name=student-service-prod
+#spring.application.name=student-service-prod
 
-server.port=8090
+#server.port=8090
 
 spring.datasource.username=root
 spring.datasource.password=1234
